--- a/index.css
+++ b/index.css
@@ -137,7 +137,9 @@ body {
 
 .banner .circle-image {
     width: 180px;
+    max-width: 60vw;
     height: 180px;
+    max-height: 60vw;
     border-radius: 50%;
     background-image: url('/files/me.jpg');
     background-size: cover;
