--- a/index.css
+++ b/index.css
@@ -140,7 +140,7 @@ body {
     height: 180px;
     max-height: 50vw;
     border-radius: 50%;
-    background-image: url('/files/logo.jpg');
+    background-image: url('/files/me2.jpg');
     background-size: cover;
     margin-bottom: 20px;
     overflow: hidden;
