--- a/index.css
+++ b/index.css
@@ -517,14 +517,19 @@ body {
 
 .js-video-present-container {
     position: relative;
+    display: flex;
     margin: 0;
     padding: 0;
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: fit-content;
     margin-top: 50px;
-    cursor: pointer;
+    overflow: hidden;
+    pointer-events: none;
+    user-select: none;
+    border-radius: 5px;
+    border: var(--background-light) 1px solid;
 }
 
 .js-video-present {
@@ -563,7 +568,6 @@ body {
     height: 35px;
     margin: 0;
     padding: 5px;
-    cursor: pointer;
     transition: all 300ms;
 }
 
@@ -580,7 +584,7 @@ body {
 }
 
 .play-pause {
-    background-image: url('./files/JSPresent/pause.svg');
+    background-image: url('./files/JSPresent/play.svg');
     background-size: cover;
 }
 
