--- a/jorge.css
+++ b/jorge.css
@@ -62,6 +62,10 @@
     color: var(--Dark);
 }
 
+.footer-link:hover {
+    text-shadow: 0 0 15px var(--LightGreen);
+}
+
 /* #endregion */
 
 /* #region SOCIAL ICONS */
