--- a/digital/styles.css
+++ b/digital/styles.css
@@ -71,8 +71,7 @@ html {
 }
 
 .body-effect {
-    position: absolute;
-    z-index: -1;
+    position: fixed;
     top: 0;
     left: 0;
     margin: 0;
@@ -81,6 +80,7 @@ html {
     height: 100%;
     background: linear-gradient(45deg, var(--Crimson), var(--LightGreen));
     opacity: 0.7;
+    z-index: -1;
 }
 
 
@@ -122,7 +122,7 @@ html {
     padding: 15px 30px;
     border-radius: 12px;
     background: linear-gradient(45deg, #ff7eb3, #ff758c, #ffa41c, #ffe100);
-    color: white;
+    color: black;
     cursor: pointer;
     animation: colorShift 3s infinite alternate;
     outline: none;
