--- a/digital/styles.css
+++ b/digital/styles.css
@@ -83,6 +83,97 @@ html {
     z-index: -1;
 }
 
+#tools {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.minimenu-container {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+    width: 20px;
+    height: 20px;
+    z-index: 1001;
+}
+
+.minimenu-container .menu-icon {
+    width: 20px;
+    height: 20px;
+    background-color: var(--LightGreen);
+    color: var(--Dark);
+    font-weight: bold;
+    font-size: small;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
+.minimenu-container .menu-icon:hover {
+    background-color: var(--DarkGreen);
+    color: var(--LightYellow);
+}
+
+.minimenu-container .menu-options {
+    list-style: none;
+    padding: 0;
+    gap: 5px;
+    margin: 0;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    background-color: transparent;
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    overflow-y: auto;
+    max-height: 90vh;
+}
+
+.minimenu-container:hover .menu-options {
+    opacity: 1;
+    visibility: visible;
+    background-color: var(--DarkBlue);
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    gap: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.minimenu-container .menu-options li {
+    padding: 5px 15px;
+    background-color: var(--MediumBlue);
+    border-radius: 5px;
+    list-style: none;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.minimenu-container .menu-options li:last-child {
+    border-bottom: none;
+}
+
+.minimenu-container .menu-options li a {
+    text-decoration: none;
+    color: var(--LightYellow);
+    font-size: 14px;
+    transition: color 0.3s ease;
+}
+
+.minimenu-container .menu-options li:hover {
+    background-color: var(--DarkGreen);
+}
 
 .credits {
     position: absolute;
@@ -94,7 +185,7 @@ html {
 .level {
     position: fixed;
     top: 5px;
-    left: 5px;
+    left: 30px;
     height: fit-content;
     display: grid;
     gap: 5px;
@@ -328,7 +419,8 @@ hr {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 0; /* Certifique-se de que outros elementos fiquem acima */
+    z-index: 0;
+    /* Certifique-se de que outros elementos fiquem acima */
 }
 
 .video-background video {
@@ -338,8 +430,10 @@ hr {
     transform: translate(-50%, -50%);
     min-width: 100vw;
     min-height: 100vh;
-    width: auto; /* Garante que a proporção seja respeitada */
-    height: auto; /* Garante que a proporção seja respeitada */
+    width: auto;
+    /* Garante que a proporção seja respeitada */
+    height: auto;
+    /* Garante que a proporção seja respeitada */
     z-index: 0;
     opacity: 0.5;
 }
